--- a/.github/workflows/build_client.yml
+++ b/.github/workflows/build_client.yml
@@ -13,7 +13,7 @@ on:
         type: string
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
