--- a/.github/workflows/build_client.yml
+++ b/.github/workflows/build_client.yml
@@ -1,7 +1,7 @@
 name: Customized Build Android Registration-Client
 
 env:
-  defaultServerBaseURL: https://api-internal.mec.mosip.net/
+  defaultServerBaseURL: https://api-internal.training.mosip.net/
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
       defaultServerBaseURL:
         description: 'Server Base URL'
         required: true
-        default: 'api-internal.mec.mosip.net'
+        default: 'api-internal.training.mosip.net'
         type: string
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
           npm install
       - name: Updating serverBaseURL.
         run: |
-          find . -type f -name "*build.gradle" -print0 | xargs -0 sed -i "s/api-internal.mec.mosip.net/${{ github.event.inputs.defaultServerBaseURL }}/g"
+          find . -type f -name "*build.gradle" -print0 | xargs -0 sed -i "s/api-internal.training.mosip.net/${{ github.event.inputs.defaultServerBaseURL }}/g"
           find . -type f -name "*build.gradle" -print0 | xargs -0 sed -i "s/Modular Open Source Identity Platform/${{ secrets.ORG_KEY }}/g"
       - name: Build Android Registration-Client
         run: |
