--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -23,7 +23,7 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }}
       - name: Updating serverBaseURL.
         run: |
-          find . -type f -name "*build.gradle" -print0 | xargs -0 sed -i "s/api-internal.mec.mosip.net/${{ github.event.inputs.defaultServerBaseURL }}/g"
+          find . -type f -name "*build.gradle" -print0 | xargs -0 sed -i "s/api-internal.training.mosip.net/${{ github.event.inputs.defaultServerBaseURL }}/g"
           find . -type f -name "*build.gradle" -print0 | xargs -0 sed -i "s/Modular Open Source Identity Platform/${{ secrets.ORG_KEY }}/g"
       - name: Build Android Registration-Client
         run: |
